--- a/index.htm
+++ b/index.htm
@@ -3,11 +3,100 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>document</title>
+        <title>BrAnimes</title>
+        <link rel="shortcut icon" href="imagens/icone.png" type="image/x-icon">
     </head>
     <body>
 
-        <h1>BrAnimes Mele_z11</h1>
+        <header>
+            <div>
+                <section>
+                    <img src="imagens/logo.png">
+                </section>
+                <section>
+                    <section>
+                    Seus melhores animes em um único lugar
+                    </section>
+                    <nav>
+                        <a href="index.htm">Home</a>
+                        <a href="programacao.htm">programação</a>
+                        <a href="galeria.htm">Galeria de Animes</a>
+                        <a href="planos.htm">Planos Plus</a>
+                        <a href="contato.htm">Contato</a>
+                    </nav>
+                </section>  
+            </div>
+        </header>
+        <main>
+            <section>
+                <p>Os melhores animes</p>
+                <p>Aproveite milhares de episódios legendados e exclusivamente dublados de animes
+                selecionados, além de filmes, animes clássicos e as ultimas novidades do Japão</p>
+                <a href="">Assistir on-line</a>
+            </section>
+
+            <section>
+                <h3>Novas Dublagens</h3>
+                <figure>
+                    <img src="imagens/Demon Slayer.jpg">
+                    <figcaption>Demon Slayer</figcaption>
+                </figure>
+                <figure>
+                    <img src="imagens/AttackOnTitan.jpg">
+                    <figcaption>AttackOnTitan</figcaption>
+                </figure>
+                <figure>
+                    <img src="imagens/My Hero Academia.jpg">
+                    <figcaption>My Hero Academia</figcaption>
+                </figure>
+                <figure>
+                    <img src="imagens/Fairy Tail.jpg">
+                    <figcaption>Fairy Tail</figcaption>
+                </figure>
+            </section>
+
+            <section>
+                <h3>Top 10</h3>
+                <figure>
+                    <img src="imagens/My Hero Academia.jpg">
+                    <figcaption>My Hero Academia</figcaption>
+                </figure>
+                <figure>
+                    <img src="imagens/dragonballz.jpg">
+                    <figcaption>Dragon Ball Z</figcaption>
+                </figure>
+                <figure>
+                    <img src="imagens/naruto.jpg">
+                    <figcaption>Naruto</figcaption>
+                </figure>
+                <figure>
+                    <img src="imagens/onepiece.jpg">
+                    <figcaption>One Piece</figcaption>
+                </figure>
+            </section>
+
+            <section>
+                <p>Animes Sem Anúcios com Premium Plus <br>
+                    por 24,90 ao mês</p>
+                    <p>Aproveite milhares de episódios legendados e exclusivamente dublados de animes
+                        selecionados, além de filmes, e encontre sucessos, clássicos e as últimas
+                        novidades do Japão.
+                    </p>
+                    <a href="">Assine o plano Plus</a>
+            </section>
+        </main>
+        <footer>
+            <div>
+                <nav>
+                    <a href="sobre.htm">Sobre nós</a>
+                    <a href="suporte.htm">Suporte ao cliente</a>
+                    <a href="termos.htm">Termos de uso</a>
+                    <a href="privacidade.htm">Privacidade</a>
+
+                </nav>
+                <p>&copy; 2020-21 BrAnimes Produções. Todos os direitos reservados</p>
+            </div>
+        </footer>
 
     </body>
 </html>
